# freq-ai

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  CHARTER.md  COVENANT.md  Cargo.toml  ISSUES.md  LICENSE-APACHE  LICENSE-MIT  README.md  STATUS.md  caretta.toml  dev.toml  install.sh  libstdin.rlib
.agents/: README.md
.agents/skills/agent-cli-reference/: SKILL.md
.agents/skills/agent-cli-reference/scripts/: capture-output-samples.js  generate-agent-cli-help.js
.agents/skills/code-explorer/: SKILL.md
.agents/skills/coding-standards/: SKILL.md
.agents/skills/issue-tracking/: SKILL.md
.agents/skills/project-context/: SKILL.md
.agents/skills/user-personas/personas/: indie-saas-founder.json  internal-platform-engineer.json
.agents/workflows/code-review/: workflow.yaml
.agents/workflows/housekeeping/: draft.md  workflow.yaml
.agents/workflows/ideation/: workflow.yaml
.agents/workflows/refresh-agents/: workflow.yaml
.agents/workflows/refresh-docs/: workflow.yaml
.agents/workflows/report-research/: draft.md
.agents/workflows/security-review/: workflow.yaml
.agents/workflows/strategic-review/: finalize.md  workflow.yaml
.github/: CI.md  labels.yml
.github/.agents/skills/cli-compat-autofix/: SKILL.md
.github/.agents/skills/merge-and-release/: SKILL.md
.github/.agents/skills/weekly-merge-release/: SKILL.md
.github/workflows/: approve-open-prs.yml  autonomous-sprint.yml  autopilot.yml  ci.yml  cli-compat.yml  factory-cycle-dispatch.yml  fix-open-prs.yml  merge-and-release.yml  model-dig.yml  monthly-factory-retrospective.yml  nightly-housekeeping.yml  publish-ci-image.yml  release-mediator.yml  release-tag-publisher.yml  release.yml  tracker-loop-dispatch.yml  weekly-backlog-curation.yml  weekly-ci-governance.yml  weekly-merge-release.yml
assets/: AGENTS.md  README.md  available-models.json  labels.yml
assets/skills/architecture/: SKILL.md
assets/skills/issue-tracking/: SKILL.md
assets/skills/testing/: SKILL.md
assets/skills/user-personas/: SKILL.md
assets/skills/user-personas/personas/: multi-tenant-agency-dev.json  small-ha-cluster-operator.json  sovereignty-operator.json
assets/workflows/business-development/: preset.yaml
assets/workflows/business-development/market-research/: draft.md  finalize.md  workflow.yaml
assets/workflows/business-development/partnership-outreach/: draft.md  finalize.md  workflow.yaml
assets/workflows/business-development/sales-prospecting/: draft.md  finalize.md  (+1 more)
assets/workflows/data-science/: preset.yaml
assets/workflows/deep-research/: preset.yaml
assets/workflows/default/: preset.yaml
assets/workflows/pm/: preset.yaml
assets/workflows/quality-assurance/: preset.yaml
assets/workflows/software-factory/: preset.yaml
assets/workflows/ux/: preset.yaml
assets/workflows/xp/: preset.yaml
crates/agent-common/: Cargo.toml
crates/agent-common/src/: lib.rs
crates/agent-runtime/: Cargo.toml  build.rs  package.json
crates/agent-runtime/src/: available_models.rs  bundled_agents.rs  lib.rs  utilities.rs
crates/claude/: Cargo.toml
crates/claude/src/: lib.rs  main.rs  wrapper.rs
crates/claude/tests/: live_cli.rs
crates/cli/: Cargo.toml  build.rs
crates/cli-common/: Cargo.toml
crates/cli-common/src/: lib.rs
crates/cli/src/: lib.rs  main.rs
crates/cli/src/agent/: actions.rs  adapter_dispatch.rs  assets.rs  auto_merge.rs  bot.rs  chat.rs  checkpoint.rs  cli.rs  cmd.rs  config_store.rs  conflicts.rs  event_log.rs  fix_pr.rs  issue.rs  launch.rs  mod.rs  models_catalog.rs  path_constraint.rs  process.rs  refresh.rs  replay.rs  review.rs  run.rs  shell.rs  snapshot.rs  subprocess_trace.rs  tracker.rs  types.rs  workflow.rs  workflows.rs
crates/cli/src/agent/tracker/: mod.rs  prompts.rs  tests.rs
crates/cli/src/ui/: components.rs  editor.rs  mod.rs  personas.rs  server.rs  sidebar.rs  statusbar.rs
crates/cli/tests/: cli_integration.rs  template_fixtures.rs
crates/cline/: Cargo.toml
crates/cline/src/: lib.rs  main.rs  wrapper.rs
crates/cline/tests/: live_cli.rs
crates/codex/: Cargo.toml
crates/codex/src/: lib.rs  main.rs  wrapper.rs
crates/codex/tests/: live_cli.rs
crates/copilot/: Cargo.toml
crates/copilot/src/: lib.rs  main.rs  wrapper.rs
crates/copilot/tests/: live_cli.rs
crates/dummy-agent/: Cargo.toml
crates/dummy-agent/examples/: argv_shapes.rs  spawn_dummy.rs
crates/dummy-agent/src/: lib.rs  main.rs  wrapper.rs
crates/dummy-agent/tests/: live_cli.rs
crates/gemini/: Cargo.toml
crates/gemini/src/: lib.rs  main.rs  wrapper.rs
crates/gemini/tests/: live_cli.rs
crates/grok/: Cargo.toml
crates/grok/src/: lib.rs  main.rs  wrapper.rs
crates/grok/tests/: live_cli.rs
crates/junie/: Cargo.toml
crates/junie/src/: lib.rs  main.rs  wrapper.rs
crates/junie/tests/: live_cli.rs
crates/xai/: Cargo.toml
crates/xai/src/: lib.rs  main.rs  wrapper.rs
crates/xai/tests/: live_cli.rs
docs/: architecture.md  configuration.md  getting_started.md  workflow.md
docs/diagrams/: autopilot-dispatch-flow.mermaid  control-plane-boundary.mermaid  factory-cycle-flow.mermaid  software-factory-operating-states.mermaid
local-cicd/: Dockerfile.compat  Dockerfile.model-dig  Dockerfile.release  Dockerfile.weekly  README.md  compose.yml
my-ci/: ci.Containerfile  compat.Containerfile  model-dig.Containerfile  release.Containerfile  weekly.Containerfile  workflows.toml
scripts/: agent.sh  check-rs-line-limit.sh  discover-all-agents.ts  dispatch-agent-pr-ci.sh  model-dig.sh  setup-hooks.sh  smoke-test.sh  stage-crates-io.sh  test-cli-compat.sh  test-examples.sh
scripts/ci/: compat-verify.sh  compat.sh  install-provider-clis.sh  install-system-deps.sh  model-dig.sh
src/: custom_themes.rs  lib.rs  main.rs
src/agent/: actions.rs  assets.rs  chat.rs  cmd.rs  config_store.rs  interview.rs  issue.rs  launch.rs  mod.rs  process.rs  refresh.rs  review.rs  run.rs  shell.rs  snapshot.rs  tracker.rs  types.rs  workflow.rs  workflows.rs
src/ui/: components.rs  editor.rs  mod.rs  security.rs  server.rs  sidebar.rs  statusbar.rs
tests/: cli_integration.rs
(+162 files in other folders)
