[package]
name = "freq-ai"
version = "0.7.4"
edition = "2024"
description = "freq-ai agent"
license = "MIT OR Apache-2.0"

[lib]
name = "freq_ai"
path = "src/lib.rs"

[[bin]]
name = "freq-ai"
path = "src/main.rs"

[dependencies]
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-embed = "8.5"
jsonwebtoken = "9"
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
handlebars = "6"
serde_yaml = "0.9"
indexmap = { version = "2", features = ["serde"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus = { version = "0.6", features = ["desktop"] }
tokio = { version = "1", features = ["full"] }
toak-rs = { version = "6.0.2", default-features = false }
keyring = "3"
dirs = "6"
axum = "0.7"
mime_guess = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { version = "0.6", features = ["web"] }
tokio = { version = "1", features = ["rt", "sync", "macros", "time"] }
gloo-net = "0.2"

[dev-dependencies]
tempfile = "3"
