[package]
name = "freq-ai-agent-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Bundled agent CLI runtime for freq-ai"
repository.workspace = true
homepage.workspace = true

[lib]
name = "agent_runtime"

[dependencies]
agent-common = { path = "../agent-common" }
cli-common = { path = "../cli-common" }
flate2 = "1"
tar = "0.4"

[build-dependencies]
flate2 = "1"
sha2 = "0.10"
tar = "0.4"

[dev-dependencies]
claude = { package = "freq-ai-claude", path = "../claude" }
cline = { package = "freq-ai-cline", path = "../cline" }
codex = { package = "freq-ai-codex", path = "../codex" }
copilot = { package = "freq-ai-copilot", path = "../copilot" }
gemini = { package = "freq-ai-gemini", path = "../gemini" }
grok = { package = "freq-ai-grok", path = "../grok" }
junie = { package = "freq-ai-junie", path = "../junie" }
tempfile = "3"
xai = { package = "freq-ai-xai", path = "../xai" }
