[package]
name = "cli-common"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agent-common = { path = "../agent-common", version = "0.8.1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1"
toml = "0.8"
