[package]
name = "cli-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Common CLI utilities for freq-ai"

[dependencies]
agent-common = { path = "../agent-common" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1"
toml = "0.8"
