[package]
name = "freq-ai"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
exclude = ["dist/"]

[lib]
name = "freq_ai"
path = "src/lib.rs"

[[bin]]
name = "freq-ai"
path = "src/main.rs"

[features]
# Forwarded to `freq-ai-agent-runtime`. Off by default so `cargo build` /
# `cargo test` are fast in development; pass `--features bundle-runtime` for
# release / distribution builds that must ship a self-contained binary with
# the agent runtime archive embedded.
default = []
bundle-runtime = ["agent-runtime/bundle-runtime"]

[dependencies]
agent-common = { path = "../agent-common" }
cli-common = { path = "../cli-common" }
claude = { package = "freq-ai-claude", path = "../claude" }
cline = { package = "freq-ai-cline", path = "../cline" }
codex = { package = "freq-ai-codex", path = "../codex" }
copilot = { package = "freq-ai-copilot", path = "../copilot" }
gemini = { package = "freq-ai-gemini", path = "../gemini" }
grok = { package = "freq-ai-grok", path = "../grok" }
junie = { package = "freq-ai-junie", path = "../junie" }
xai = { package = "freq-ai-xai", path = "../xai" }
agent-runtime = { package = "freq-ai-agent-runtime", path = "../agent-runtime" }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
rust-embed = { version = "8.5", features = ["interpolate-folder-path"] }
jsonwebtoken = "9"
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
handlebars = "6"
serde_yaml = "0.9"
indexmap = { version = "2", features = ["serde"] }
tempfile = "3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus = { version = "0.6", features = ["desktop"] }
tokio = { version = "1", features = ["full"] }
toak-rs = { version = "6.0.3", default-features = false }
keyring = "3"
dirs = "6"
axum = "0.7"
mime_guess = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { version = "0.6", features = ["web"] }
tokio = { version = "1", features = ["rt", "sync", "macros", "time"] }
gloo-net = "0.2"
