[package]
name = "caretta"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
exclude = ["dist/"]

[lib]
name = "caretta"
path = "src/lib.rs"

[[bin]]
name = "caretta"
path = "src/main.rs"

[features]
# Forwarded to `caretta-agent-runtime`. Off by default so `cargo build` /
# `cargo test` are fast in development; pass `--features bundle-runtime` for
# release / distribution builds that must ship a self-contained binary with
# the agent runtime archive embedded.
default = []
bundle-runtime = ["agent-runtime/bundle-runtime", "dep:sha2"]

[dependencies]
agent-common = { path = "../agent-common" }
cli-common = { path = "../cli-common" }
claude = { package = "caretta-claude", path = "../claude" }
cline = { package = "caretta-cline", path = "../cline" }
codex = { package = "caretta-codex", path = "../codex" }
copilot = { package = "caretta-copilot", path = "../copilot" }
gemini = { package = "caretta-gemini", path = "../gemini" }
grok = { package = "caretta-grok", path = "../grok" }
junie = { package = "caretta-junie", path = "../junie" }
xai = { package = "caretta-xai", path = "../xai" }
agent-runtime = { package = "caretta-agent-runtime", path = "../agent-runtime" }
sha2 = { workspace = true, optional = true }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
rust-embed = { version = "8.5", features = ["interpolate-folder-path"] }
jsonwebtoken = "9"
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
handlebars = "6"
serde_yaml = "0.9"
indexmap = { version = "2", features = ["serde"] }
tempfile = "3"

# sha2 must be an unconditional dev-dependency because `check_hash` is
# compiled under `cfg(test)` regardless of whether `bundle-runtime` is active.
# The optional `[dependencies]` entry only unlocks sha2 for non-test code when
# bundle-runtime is enabled; `cargo test` without that feature still needs it.
[dev-dependencies]
sha2 = { workspace = true }

[build-dependencies]
sha2 = { workspace = true }
walkdir = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus = { version = "0.6", features = ["desktop"] }
tokio = { version = "1", features = ["full"] }
toak-rs = { version = "6.0.3", default-features = false }
keyring = "3"
dirs = "6"
axum = "0.7"
mime_guess = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { version = "0.6", features = ["web"] }
tokio = { version = "1", features = ["rt", "sync", "macros", "time"] }
gloo-net = "0.2"
